<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    tools:context=".presentation.about.AboutFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/about_label"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/settings_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/settings_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorSurface"
                    android:padding="20dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/settings_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_label"
                        android:textColor="?attr/colorControlNormal"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <View
                        android:id="@+id/settings_separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="10dp"
                        android:background="?android:colorControlHighlight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/settings_label">

                    </View>

                    <LinearLayout
                        android:id="@+id/dark_mode_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/settings_separator">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0"
                            android:src="@drawable/round_light_mode_24">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:text="@string/dark_theme_option"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="21sp">

                        </TextView>

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/dark_theme_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0"
                            android:theme="@style/SwitchStyle"
                            android:checked="false">

                        </com.google.android.material.switchmaterial.SwitchMaterial>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/copy_method"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/dark_mode_layout">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0"
                            android:src="@drawable/outline_content_copy_24">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:text="@string/copy_prefix_option"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="21sp">

                        </TextView>

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/copy_prefix_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0"
                            android:theme="@style/SwitchStyle"

                            android:checked="false">

                        </com.google.android.material.switchmaterial.SwitchMaterial>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/about_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_cv">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/other_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorSurface"
                    android:padding="20dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/other_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other_label"
                        android:textColor="?colorControlNormal"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <View
                        android:id="@+id/about_separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="?colorControlHighlight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/other_label">

                    </View>

                    <LinearLayout
                        android:id="@+id/how_to_use_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:background="@drawable/ripple_settings_item"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/about_separator">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0"
                            android:src="@drawable/round_school_24">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:text="@string/how_to_use_button"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="21sp">

                        </TextView>

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/round_chevron_right_24"
                            app:tint="?attr/colorControlNormal" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/contact_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:background="@drawable/ripple_settings_item"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/how_to_use_layout">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0"
                            android:src="@drawable/round_email_24">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:text="@string/contact_us_button"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="21sp">

                        </TextView>

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/round_chevron_right_24"
                            app:tint="?attr/colorControlNormal" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/rate_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:background="@drawable/ripple_settings_item"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/contact_layout">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:padding="2dp"
                            android:layout_weight="0"
                            android:src="@drawable/custom_star">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:text="@string/rate_this_app_button"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="21sp">

                        </TextView>

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/round_chevron_right_24"
                            app:tint="?attr/colorControlNormal" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>